--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
+# ---------------------------------------------------------
+# .GITIGNORE
+# ---------------------------------------------------------
 .terraform*
 terraform*
